name:      naksha
version:   0.1.0.0
synopsis:  A library for working with OpenStreetMap and related maaping formats.

homepage:    http://bitbucket.org/piyush-kurur/naksha.git

license:      BSD3
license-file: LICENSE

author:     Piyush P Kurur
maintainer: ppk@cse.iitk.ac.in

category:  Geospatial


build-type:    Simple
cabal-version: >=1.10

library
  ghc-options: -Wall
  build-depends: base            >= 4.6  && < 4.9
               , containers
               , groups                     < 5
               , text
               , vector

  exposed-modules: Naksha.Position
                 , Naksha.Feature
                 , Naksha.Feature.Name
  other-modules: Naksha.Feature.Internal
  default-language: Haskell2010
