name:        naksha
version:     0.1.0.0
synopsis:    A library for working with map and various maping formats.

description: Naksha is a library to work with geographic data, mapping formats etc.

homepage:    http://bitbucket.org/piyush-kurur/naksha.git

license:      BSD3
license-file: LICENSE

author:     Piyush P Kurur
maintainer: ppk@cse.iitk.ac.in

category:  Geospatial

build-type:    Simple
cabal-version: >=1.10


bug-reports: https://bitbucket.org/piyush-kurur/naksha/issues

source-repository head
  type: git
  location: https://bitbucket.org/piyush-kurur/naksha

library
  ghc-options: -Wall
  build-depends: base            >= 4.6  && < 4.10
               , containers
               , groups
               , text
               , vector          >= 0.7.1 && < 0.12
               , lens

  exposed-modules: Naksha.Position
                 , Naksha.Annotate
                 , Naksha.Annotate.Feature
                 , Naksha.Annotate.Attribute
                 , Naksha.Language
  other-modules: Naksha.Annotate.Internal

  default-language: Haskell2010

test-Suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  ghc-options: -Wall
  other-modules: Naksha.PositionSpec
  build-depends: base
               , bytestring
               , HUnit                          >= 1.2
               , QuickCheck                     >= 2.4
               , hspec
               , transformers
               , naksha                         == 0.1.0.0
               , vector
