name:        naqsha
version:     0.2.0.1
synopsis:    A library for working with geospatial data types.

description: Naqsha is a library to work with geospatial data types like latitudes and longitudes. It provides
             some basic operations like distance calculations.

homepage:    http://github.com/naqsha/naqsha.git

license:      BSD3
license-file: LICENSE

author:     Piyush P Kurur
maintainer: ppk@cse.iitk.ac.in

category:  Geospatial, Naqsha

build-type:    Simple
cabal-version: >=1.10
extra-source-files: CHANGELOG.md
                  , README.md

bug-reports: https://github.com/naqsha/naqsha/issues

source-repository head
  type: git
  location:  https://github.com/naqsha/naqsha.git

library
  ghc-options: -Wall
  build-depends: base                        >= 4.6   && < 4.11
               , bytestring                  >= 0.9   && < 0.11
               , groups
               , vector                      >= 0.7.1 && < 0.13

  exposed-modules: Naqsha.Geometry
                 , Naqsha.Geometry.Coordinate.GeoHash
                 , Naqsha.Geometry.Internal
                 , Naqsha.Geometry.Spherical
                 , Naqsha.Version
  other-modules: Paths_naqsha
               , Naqsha.Geometry.Angle
               , Naqsha.Geometry.Coordinate

  default-language: Haskell2010

test-Suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  ghc-options: -Wall
  other-modules: Naqsha.Arbitrary
               , Naqsha.Geometry.AngleSpec
               , Naqsha.Geometry.CoordinateSpec
               , Naqsha.Geometry.Coordinate.GeoHashSpec

  build-depends: base
               , HUnit                          >= 1.2
               , QuickCheck                     >= 2.4
               , groups
               , hspec
               --
               --   This package
               --
               , naqsha
