cabal-version: 2.2
name:        naqsha
version:     0.3.0.1
synopsis:    A library for working with anything map related.

description: Naqsha is a library to work with geospatial data types,
   like latitudes and longitudes, mapping projects like openstreetmap,
   various map related file formats.

homepage:    http://github.com/naqsha/naqsha.git


copyright: (c) 2016 Piyush P Kurur
license:      Apache-2.0 OR BSD-3-Clause
license-files: LICENSE-BSD3
               LICENSE-APACHE-2.0

author:     Piyush P Kurur
maintainer: ppk@cse.iitk.ac.in

category:  Geospatial, Naqsha

build-type:    Simple

extra-source-files: CHANGELOG.md
                  , README.md

bug-reports: https://github.com/naqsha/naqsha/issues

source-repository head
  type: git
  location:  https://github.com/naqsha/naqsha.git

----------------------- Common declarations ---------------------------

common defaults
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends: base                   >= 4.10 &&  < 4.13
               , bytestring             >= 0.10 &&  < 0.11
               , groups
               , vector                 >= 0.12 &&  < 0.13

---------------------- Components --------------------------------------

library geospatial
  import: defaults
  hs-source-dirs: geospatial
  exposed-modules: Naqsha.Geometry
                 , Naqsha.Geometry.Coordinate.GeoHash
                 , Naqsha.Geometry.Internal
                 , Naqsha.Geometry.Spherical
  other-modules: Naqsha.Geometry.Angle
               , Naqsha.Geometry.Coordinate

library
  import: defaults
  build-depends: geospatial
  hs-source-dirs: src
  exposed-modules: Naqsha.Version
  reexported-modules: Naqsha.Geometry
                    , Naqsha.Geometry.Coordinate.GeoHash
                    , Naqsha.Geometry.Spherical
  autogen-modules: Paths_naqsha
  other-modules: Paths_naqsha


--------------------------------- Test suits ---------------------------

test-Suite test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs

  build-depends:
               , HUnit                          >= 1.2
               , QuickCheck                     >= 2.4
               , hspec
               , hspec-discover
               --
               --   This package
               --
               , geospatial

  other-modules: Naqsha.Arbitrary
               , Naqsha.Geometry.AngleSpec
               , Naqsha.Geometry.CoordinateSpec
               , Naqsha.Geometry.Coordinate.GeoHashSpec

 build-tool-depends: hspec-discover:hspec-discover
